Fixes some contrast issues with font color

--- a/public/root.css
+++ b/public/root.css
@@ -18,3 +18,7 @@ div.loading {
     justify-content: center;
     height: 100vh;
 }
+
+.input-group-text {
+    color: black !important;
+}
